--- a/precastr/controller/home/cell/HomeTextPostTableViewCell.xib
+++ b/precastr/controller/home/cell/HomeTextPostTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.43"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -103,6 +103,38 @@
                                     <action selector="publishInfoButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="7PQ-8r-DcK"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fx4-sE-5ae">
+                                <rect key="frame" x="0.0" y="0.0" width="30" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.047058823530000002" green="0.43529411759999997" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="telephone_icon"/>
+                                <connections>
+                                    <action selector="publishInfoButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="KOT-qJ-HXU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <view hidden="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BfF-db-NRE">
+                        <rect key="frame" x="15" y="50" width="358" height="35"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bBI-4g-f2u">
+                                <rect key="frame" x="0.0" y="4" width="30" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.047058823530000002" green="0.43529411759999997" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" image="telephone_icon"/>
+                                <connections>
+                                    <action selector="publishInfoButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="FXj-69-2zb"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Social media options will be available once the cast is approved." lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GlF-kg-TNK">
+                                <rect key="frame" x="55" y="0.0" width="303" height="35"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="VisbyCF-Regular" family="Visby CF" pointSize="14"/>
+                                <color key="textColor" red="0.83529411764705885" green="0.0078431372549019607" blue="0.039215686274509803" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
@@ -162,10 +194,15 @@
                         <inset key="imageEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                         <state key="normal" title="View Details"/>
                     </button>
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cast_pagination_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="Nae-nz-xd1">
+                        <rect key="frame" x="186" y="111" width="20" height="19"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="castPaginationArrow" destination="Nae-nz-xd1" id="vSD-bA-6d2"/>
                 <outlet property="currentCountImageLbl" destination="C2x-7g-Slh" id="tsW-WU-fjC"/>
                 <outlet property="dateLabel" destination="Gg1-ma-dqD" id="jRG-cp-U2e"/>
                 <outlet property="descriptionView" destination="h2e-jP-uD5" id="Vvw-OD-U9o"/>
@@ -173,6 +210,7 @@
                 <outlet property="imageCounterView" destination="7xy-Fs-gCr" id="FTd-7F-iT0"/>
                 <outlet property="imageGalleryScrollView" destination="DAD-Le-9Ur" id="VZT-cB-gwl"/>
                 <outlet property="pageControl" destination="kmg-Py-FWc" id="MZP-Xw-frJ"/>
+                <outlet property="pendingInfoView" destination="BfF-db-NRE" id="M7y-uo-sAo"/>
                 <outlet property="postPrePublishView" destination="9SE-4e-McF" id="rIo-B0-Zqd"/>
                 <outlet property="postStatusDateView" destination="DRm-aE-LGs" id="alz-IX-ImM"/>
                 <outlet property="profileLabel" destination="vi0-ky-EEw" id="pK9-sv-uvp"/>
@@ -191,8 +229,10 @@
     </objects>
     <resources>
         <image name="approved" width="20" height="20"/>
+        <image name="cast_pagination_arrow" width="19.666666030883789" height="19"/>
         <image name="publish_info" width="20" height="20"/>
         <image name="publishto_facebook" width="20" height="20"/>
         <image name="publishto_twitter" width="20" height="20"/>
+        <image name="telephone_icon" width="18" height="18"/>
     </resources>
 </document>
